--- a/styles/TextMessage.css
+++ b/styles/TextMessage.css
@@ -22,14 +22,14 @@
 
 .TextMessage_button {
   margin: 0;
-  font-size: 8px;  
-  padding:0;
+  font-size: 8px;
+  padding: 0;
   -webkit-appearance: none;
-  background:none;
-  border:0;
+  appearance: none;
+  background: none;
+  border: 0;
   font-family: inherit;
   cursor: pointer;
-
   position: absolute;
   right: 2px;
   bottom: 0;
