--- a/styles/TitleScreen.css
+++ b/styles/TitleScreen.css
@@ -4,13 +4,14 @@
   right: 0;
   top: 0;
   bottom: 0;
-  background: #000;
+  background: url("/images/TPWG_background.png") no-repeat;
+  background-size: 150%;
 }
 
 .TitleScreen_logo {
   display: block;
-  margin: 0 auto;
-  width: 128px;
+  margin: 5px auto;
+  width: 96px;
   image-rendering: pixelated;
 }
 
@@ -21,10 +22,16 @@
   background: transparent;
   border: 0;
 }
-.TitleScreen button {
+.TitleScreen button,
+.TitleScreen p {
   color: #fff;
   justify-content: center;
-  padding:0;
+  padding: 0;
+  font-size: 5px;
+  line-height: 6px;
+}
+.TitleScreen p {
+  margin-bottom: 3px;
 }
 
 .TitleScreen .DescriptionBox {
