--- a/styles/global.css
+++ b/styles/global.css
@@ -18,14 +18,16 @@ body {
   background: #333;
   padding: 0;
   margin: 0;
+  height: fit-content;
   overflow: hidden;
-  font-family: "Charm", "Ribeye", cursive;
+  font-family: "Press Start 2P", "Charm", "Ribeye", cursive;
 }
 .how-to-play {
-  position: absolute;
+  position: relative;
+  width: 100%;
+  height: 20px;
+  top: 540px;
   left: 0;
-  right: 0;
-  bottom: 0;
   text-align: center;
   font-size: 12px;
   color: #fff;
@@ -33,15 +35,18 @@ body {
 
 .game-container {
   position: relative;
-  background: hsl(197, 30%, 60%);
+  background: hsl(198, 63%, 74%);
   width: 352px;
   height: 198px;
   margin: 0 auto;
   outline: 1px solid #fff;
 
   transform: scale(3) translateY(50%);
+
+  overflow: hidden;
 }
 
 .game-container canvas {
   image-rendering: pixelated;
+  /* transform: translateX(-35%) translateY(0%); */
 }
