Changed some links

--- a/styles/TitleScreen.css
+++ b/styles/TitleScreen.css
@@ -4,7 +4,7 @@
   right: 0;
   top: 0;
   bottom: 0;
-  background: url("./images/TPWG_background.png") no-repeat;
+  background: url("../images/TPWG_background.png") no-repeat;
   background-size: 150%;
 }
 
