--- a/styles/global.css
+++ b/styles/global.css
@@ -25,12 +25,33 @@ body {
 .how-to-play {
   position: relative;
   width: 100%;
-  height: 20px;
   top: 540px;
   left: 0;
   text-align: center;
   font-size: 12px;
   color: #fff;
+}
+.credits {
+  position: relative;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  margin: 0 auto;
+  top: 600px;
+  left: 0;
+  text-align: center;
+  font-size: 16px;
+  color: #fff;
+  border: 1px solid white;
+  padding: 10px;
+}
+.credits p:first-of-type {
+  margin-bottom: 50px;
+}
+.credits a {
+  color: inherit;
 }
 
 .game-container {
