--- a/styles/EndGameMessage.css
+++ b/styles/EndGameMessage.css
@@ -5,18 +5,26 @@
 .EndGameMessage_content p {
   font-size: 3px;
 }
-/* .EndGameMessage_ticket {
-  margin: 16px 0;
-} */
-.EndGameMessage button {
-  height: 3px;
-  width: 3px;
+.EndGameMessage_print,
+.EndGameMessage_return {
   font-size: 1px;
-  margin: 8px 0;
-  padding: 8px 16px;
-  font-size: 4px;
-  border-radius: 6px;
-  border: 1px solid #888;
-  background: #eee;
+  padding: 5px 10px;
+  font-size: 5px;
+  font-family: inherit;
+  border-radius: 3px;
+  border: 1px solid hsl(289, 50%, 85%);
+  background: hsl(193, 50%, 85%);
   cursor: pointer;
+}
+
+.EndGameMessage_print:hover,
+.EndGameMessage_return:hover {
+  transform: scale(1.01);
+  transition: all 200ms linear;
+}
+.EndGameMessage_print:active,
+.EndGameMessage_return:active {
+  transform: scale(0.99);
+  transition: all 50ms linear;
+  box-shadow: inset 0 0 1px 1px hsla(193, 50%, 30%, 0.2);
 }
